--- a/cacmer-bs-ms-modules/k8s-ingress-clean-archi-cacmer-risk-evaluator/pom.xml
+++ b/cacmer-bs-ms-modules/k8s-ingress-clean-archi-cacmer-risk-evaluator/pom.xml
@@ -5,17 +5,17 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.1</version>
+		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>fr.placide</groupId>
 	<artifactId>cacmer-risk-evaluator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>k8s-ingress-kafka-avro-clean-archi-cacmer-risk-evaluator</name>
+	<name>k8s-ingress-cacmer-risk-evaluator</name>
 	<description>k8s-ingress-kafka-avro-clean-archi-cacmer-risk-evaluator</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2023.0.0</spring-cloud.version>
+		<spring-cloud.version>2022.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,6 +37,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-kubernetes-client-all</artifactId>
 		</dependency>
 
 		<dependency>
@@ -63,6 +67,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>k8s-ingress-cacmer-risk-evaluator-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -74,6 +79,17 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>false</skipTests>
+					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
 		</plugins>
